[package]
name = "feedzai-client"
version = "0.1.0"
edition = "2021"
authors = ["Andrey Khranovsky <andrei.k@bigpayme.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6"
clap = { version = "4.4", features = ["derive", "env"] }
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tqdm = "0.6"
ureq = { version = "2.9", features = ["json"] }
